--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,12 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Bird Call Review
+email: 
+description: Birds are the most beautiful creatures in nature and their melodious calls are as diverse as the species. But are they all good? Can a bird be lazy? Can a bird call be sexy? Let's find out.
+baseurl: ""
+url: "http://birdcallreview.com"
+twitter_username: birdcallreview
 
 permalink: /:title
 
