shortened site description

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Bird Call Review
 email: 
-description: Birds are the most beautiful creatures in nature and their melodious calls are as diverse as the species. But are they all good? Can a bird be lazy? Can a bird call be sexy? Let's find out.
+description: Bird calls are incredibly diverse. But are they all good? Are some just okay? Can a bird call be sexy? Let's find out.
 baseurl: ""
 url: "http://birdcallreview.com"
 twitter_username: birdcallreview
